@@ -36,6 +36,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #25447: Copying the lru_cache() wrapper object now always works,
+  independedly from the type of the wrapped object (by returning the original
+  object unchanged).
+
 - Issue #24103: Fixed possible use after free in ElementTree.XMLPullParser.
 
 - Issue #25860: os.fwalk() no longer skips remaining directories when error
